<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/lblTitle"
        app:layout_constraintStart_toEndOf="@+id/lblTitle"
        app:layout_constraintTop_toTopOf="@+id/lblTitle" />

    <TextView
        android:id="@+id/lblYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/year"
        app:layout_constraintBottom_toBottomOf="@+id/tvYear"
        app:layout_constraintEnd_toStartOf="@+id/tvYear"
        app:layout_constraintTop_toTopOf="@+id/tvYear" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1990" />

    <TextView
        android:id="@+id/lblType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/type"
        app:layout_constraintBottom_toBottomOf="@+id/tvType"
        app:layout_constraintEnd_toStartOf="@+id/tvType"
        app:layout_constraintTop_toTopOf="@+id/tvType" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tvYear"
        app:layout_constraintTop_toBottomOf="@+id/tvYear"
        tools:text="movie" />
</androidx.constraintlayout.widget.ConstraintLayout>